--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "author": "Ujjwal Upadhyay",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "colors": "^1.4.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
