--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.1",
     "morgan": "^1.10.0",
-    "nodemon": "^3.1.3"
+    "nodemon": "^3.1.3",
+    "slugify": "^1.6.6"
   }
 }
